# sigcarrier-software

artik-ota/: LICENSE.Apache-2.0  Makefile
artik-ota/artik_updater/: artik-updater.c
artik-ota/debian/: artik-ota.install  changelog  control  copyright  rules
artik-ota/packaging/: artik-ota.spec
artik-ota/units/: dnf-automatic-undo.service  dnf-automatic.path  dnf-automatic.service
artik-plugin/: build.sh
artik-plugin-artik710/debian/: artik-plugin-artik710-audio.install  artik-plugin-artik710-bluetooth.install  artik-plugin-artik710-bluetooth.postinst  artik-plugin-artik710-fstab.preinst  artik-plugin-artik710-security.install  artik-plugin-artik710-usb.install  artik-plugin-artik710-wifi.install  artik-plugin-artik710-zigbee.install  changelog  control  rules
artik-plugin-artik710/packaging/: artik-plugin-artik710.spec
artik-plugin/debian/: artik-plugin-audio-common.install  artik-plugin-audio-common.postinst  artik-plugin-bluetooth-common.install  artik-plugin-bluetooth-common.postinst  artik-plugin-license.install  artik-plugin-network-common.install  artik-plugin-network-common.postinst  artik-plugin-postinst.install  artik-plugin-usb-common.install  artik-plugin-usb-common.postinst  artik-plugin-wifi-common.install  artik-plugin.install  artik-plugin.postinst  changelog  control
artik-plugin/packaging/: artik-plugin.spec
artik-plugin/scripts/: .bash_aliases  booting-done.sh  logdump.sh  open-jdk.sh  platform
artik-repos/debian/: artik-repos-artik530.install  artik-repos-artik530s.install  artik-repos-artik533s.install  artik-repos-artik710.install  artik-repos-artik710s.install  artik-repos-e2e.install  artik-repos-e2e.postinst  artik-repos-e2e.prerm  changelog  control  postinst  prerm  rules
artik-repos/fedora/: RPM-GPG-KEY-artik-platform  artik.repo
artik-repos/packaging/: artik-repos.spec
artik-repos/ubuntu/: artik-platform-keyring.gpg  artik-platform.pref
artik-ubuntu-meta/: base  base-recommends-armhf  metapackage-map  misc  misc-recommends-armhf  network  network-recommends-arm64  nexell  nexell-arm64  nexell-recommends-arm64
artik-ubuntu-meta/debian/: changelog  control
bluez/: Makefile.tools  build.sh
bluez/debian/: bluez.install  changelog  rules
bluez/gobex/: gobex.c
bluez/packaging/: bluez.spec
bluez/plugins/: autopair.c
bluez/src/: adapter.c  advertising.c  agent.c  bluetooth.service.in  device.c
boot-firmwares-artik710/: fip-secure.img  partmap_emmc_ota.txt  uInitrd
build-artik/: README.md  build_fedora_sysroot.sh  build_kernel.sh  build_uboot.sh  build_ubuntu.sh  build_ubuntu_sysroot.sh  mkbootimg.sh  mksboot.sh  mksdboot.sh  mksdboot_kms.sh  mksdfuse.sh  release.sh  release_rootfs.sh
build-artik/config/: artik10.cfg  artik5.cfg  artik530.cfg  artik530_ubuntu.cfg  artik530s_secure.list  artik530s_ubuntu.cfg  artik533s.cfg  artik533s_secure.list  artik533s_ubuntu.cfg  artik710.cfg  artik710_ubuntu.cfg  artik710s_secure.list  artik710s_ubuntu.cfg  common.cfg
coap/: Makefile.in  run.sh
coap/debian/: changelog  control  copyright  rules
coap/packaging/: build.sh  libcoap.spec  libcoap_build.patch
connman/debian/: connman.postinst  control
connman/gweb/: giognutls.c
connman/packaging/: connman.spec
connman/scripts/: connman.in
connman/src/: firewall.c  iptables.c
gst-plugins-camera-s5p6818/: Makefile.am  Makefile.cross  build.sh  configure.ac  gstcamerasrc.c  gstcamerasrc.h
gst-plugins-camera-s5p6818/debian/: changelog  control  gstreamer1.0-plugins-camera-s5p6818.install  rules
gst-plugins-camera-s5p6818/packaging/: gst-plugins-camera-s5p6818.spec
gst-plugins-renderer/: Makefile.am  Makefile.cross  build.sh  configure.ac  gstnxrenderer.c  gstnxrenderer.h
gst-plugins-renderer/debian/: changelog  control  gstreamer1.0-plugins-renderer.install
gst-plugins-renderer/packaging/: gst-plugins-renderer.spec
gst-plugins-scaler/: Makefile.am  Makefile.cross  configure.ac  gstnxscaler.c  gstnxscaler.h
gst-plugins-scaler/debian/: changelog  control  gstreamer1.0-plugins-scaler.install
gst-plugins-scaler/packaging/: gst-plugins-scaler.spec
gst-plugins-video-dec/: autogen.sh  configure.ac
gst-plugins-video-dec/debian/: changelog  control  gstreamer1.0-plugins-video-dec.install
gst-plugins-video-dec/packaging/: gst-plugins-video-dec.spec
gst-plugins-video-dec/src/: Makefile.am  decoder.c  decoder.h  gstnxvideodec.c  gstnxvideodec.h
gst-plugins-video-enc/: autogen.sh  configure.ac
gst-plugins-video-enc/debian/: changelog  control  gstreamer1.0-plugins-video-enc.install
gst-plugins-video-enc/packaging/: gst-plugins-video-enc.spec
gst-plugins-video-enc/src/: Makefile.am  gstnxvideoenc.c  gstnxvideoenc.h
gst-plugins-video-sink/: configure.ac
gst-plugins-video-sink/debian/: changelog  control  gstreamer1.0-plugins-video-sink.install
gst-plugins-video-sink/packaging/: gst-plugins-video-sink.spec
gst-plugins-video-sink/src/: Makefile.am  gstnxvideosink.c  gstnxvideosink.h
iotivity/: .gitignore  build.sh
iotivity/build_common/: SConscript
iotivity/debian/: changelog  control  iotivity-dev.install  iotivity-service.install  iotivity.install  rules
iotivity/packaging/: iotivity.spec
iotivity/plugins/: SConscript
libdrm/: Makefile.am  configure.ac
lwm2m/: CMakeLists.txt  run.sh
lwm2m/debian/: changelog  control  copyright  rules
lwm2m/packaging/: build.sh  wakaama.spec
mqttsn/: CMakeLists.txt  run.sh
mqttsn/debian/: changelog  control  copyright  rules
mqttsn/packaging/: paho_mqttsn.spec
mqttsn_gateway/: run.sh
nx-gst-meta/: configure.ac
nx-gst-meta/src/: Makefile.am  gstmmvideobuffermeta.c  gstmmvideobuffermeta.h
nx-renderer/: Makefile.am  Makefile.cross  build.sh  configure.ac  dp_buffer.c  dp_crtc.c  dp_device.c  dp_framebuffer.c  dp_plane.c  dp_screen.c  dp_util.c  format.c  kms.c  pattern.c
nx-renderer/debian/: changelog  control  nx-renderer-dev.install  nx-renderer.install
nx-renderer/include/: dp.h  dp_common.h  kms.h
nx-renderer/packaging/: nx-renderer.spec
nx-v4l2/: nx-v4l2.c  nx-v4l2.h
ubuntu-build-service/: README.md
(+193 files in other folders)
